  76.	[bug]		jelte
	Fixed a bug in the handling of 'remote' config modules (i.e.
	modules that peek at the configuration of other modules), where
	they answered 'unknown command' to commands for those other
	modules. (Trac #278, r2506)

  75.	[bug]		jinmei
	Fixed a bug in the sqlite3 data source where temporary strings
	could be referenced after destruction.  It caused various lookup
	failures with SunStudio build. (Trac #288, r2494)

  74.	[func]*		jinmei
	Refactored the cc::Session class by introducing an abstract base
	class.  Test code can use their own derived mock class so that
	tests can be done without establishing a real CC session.  This
	change also modified some public APIs, mainly in the config
	module. (Trac #275, r2459)

  73.	[bug]		jelte
  	Fixed a bug where in bindctl, locally changed settings were
	reset when the list of running modules is updated. (Trac #285,
	r2452)

  72.	[build]		jinmei
	Added -R when linking python wrapper modules to libpython when
	possible.  This helps build BIND 10 on platforms that install
	libpython whose path is unknown to run-time loader.  NetBSD is a
	known such platform. (Trac #148, r2427)

  71.  [func]		each
  	Add "-a" (address) option to bind10 to specify an address for
	the auth server to listen on.

  70.  [func]		each
  	Added a hot-spot cache to libdatasrc to speed up access to
	repeatedly-queried data and reduce the number of queries to
	the underlying database; this should substantially improve
	performance.  Also added a "-n" ("no cache") option to
	bind10 and b10-auth to disable the cache if needed.
	(Trac #192, svn r2383)

bind10-devel-20100701 released on July 1, 2010

  69.  [func]*		jelte
	Added python wrappers for libdns++ (isc::dns), and libxfr. This
	removes the dependency on Boost.Python. The wrappers don't
	completely implement all functionality, but the high-level API
	is wrapped, and current modules use it now.
	(Trac #181, svn r2361)

  68.  [func]		zhanglikun